# OpenApoc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_STYLE.md  LICENSE  OpenApoc - Extract.lnk  OpenApoc - Play.lnk  OpenApoc.pro  OpenApoc.sln  OpenApoc.vcproj  OpenApoc.vcxproj  OpenApoc.vcxproj.filters  README.MD  README.md  README_HOTKEYS.txt  TODO.md  Vagrantfile  _config.yml  apocicon.rc  append_sources.sh  appveyor-dev.yml  appveyor.yml  asan-stderr  battlebriefing.cpp  brainlessbuild.sh  clang_format_win.bat  gen_version_win.bat  index.html  index.md  log.txt  packages.config  params.json  portable.txt  vcpkg.json  version.h.in
dependencies/: CMakeLists.txt  allegro5.vcxproj  freetype.vcxproj  glm.vcxproj  glm.vcxproj.filters  libsmacker.vcxproj  libsmacker.vcxproj.filters  lodepng.vcxproj  lodepng.vcxproj.filters  lua.vcxproj  miniz.vcxproj  miniz.vcxproj.filters  packages.config  physfs.vcxproj  tinyxml2.vcxproj
forms/: CMakeLists.txt  checkbox.cpp  checkbox.h  control.cpp  control.h  form.cpp  form.h  forms.h  forms.vcxproj  forms.vcxproj.filters  forms_enums.h  forms_pch.h  graphic.cpp  graphic.h  graphicbutton.cpp  graphicbutton.h  hscrollbar.cpp  hscrollbar.h  label.cpp  label.h  list.cpp  list.h  listbox.cpp  listbox.h  multilistbox.cpp  multilistbox.h  packages.config  radiobutton.cpp  radiobutton.h  scrollbar.cpp  scrollbar.h  textbutton.cpp  textbutton.h  textedit.cpp  textedit.h  ticker.cpp  ticker.h  transactioncontrol.cpp  transactioncontrol.h  tristatebox.cpp  (+5 more)
framework/: CMakeLists.txt  configfile.cpp  configfile.h  data.cpp  data.h  event.cpp  event.h  filesystem.h  font.cpp  font.h  framework.cpp  framework.h  framework.vcxproj  framework.vcxproj.filters  framework_pch.h  fs.h  ignorecase.c  ignorecase.h  image.cpp  image.h  imageloader_interface.h  includes.h  jukebox.cpp  jukebox.h  keycodes.h  locked_queue.h  logger.cpp  logger.h  logger_file.cpp  logger_file.h  logger_sdldialog.cpp  logger_sdldialog.h  luaframework.cpp  luaframework.h  main.cpp  modinfo.cpp  modinfo.h  musicloader_interface.h  network.cpp  network.h  (+25 more)
framework/ThreadPool/: ThreadPool.h
framework/apocresources/: apocfont.cpp  apocfont.h  apocpalette.cpp  apocpalette.h  apocresource.h  cursor.cpp  cursor.h  loftemps.cpp  loftemps.h  pck.cpp  pck.h  rawimage.cpp  rawimage.h
framework/cmake/: FindOpenGLESv2.cmake  framework.cmake  imageloader.cmake  renderer.cmake  soundbackend.cmake
framework/fs/: physfs_archiver_cue.cpp  physfs_archiver_cue.h
framework/imageloader/: allegro_image.cpp  lodepng.cpp  lodepng.h  lodepng_image.cpp  pcx.cpp
framework/musicloader/: music.cpp  vorbis.cpp
framework/render/: allegro_image.cpp  allegro_renderer.cpp  gl_3_0.cpp  gl_3_0.hpp  gl_image.cpp  gl_util.h  ogl_3_0_renderer.cpp  ogl_renderer.cpp  ogles_2_0_renderer.cpp
framework/sampleloader/: rawsound.cpp  wavsound.cpp
framework/serialization/: serialize.cpp  serialize.h
framework/sound/: allegro_backend.cpp  null_backend.cpp  sdlraw_backend.cpp
framework/video/: smk.cpp
game/state/: CMakeLists.txt  aequipment.cpp  aequipment.h  agent.cpp  agent.h  battle.cpp  battle.h  battlemap.cpp  battlemap.h  battlemappart.cpp  battlemappart.h  battlemappart_type.cpp  battlemappart_type.h  battlemapsector.cpp  battlemapsector.h  battlemaptileset.h  battletile.cpp  battletile.h  battletileobject.cpp  battletileobject.h  battletileobject_mappart.cpp  battletileobject_mappart.h  equipment.h  gameevent.cpp  gameevent.h  gameevent_types.h  gameeventtypes.h  gamestate.cpp  gamestate.h  gamestate.vcxproj  gamestate.vcxproj.filters  gamestate_pch.h  gamestate_serialize.cpp  gamestate_serialize.cpp~RF32d32bfa.TMP  gamestate_serialize.cpp~RF3c74b548.TMP  gamestate_serialize.h  gamestate_serialize.xml  gametime.cpp  gametime.h  gametime_facet.h  (+20 more)
game/ui/: CMakeLists.txt  agentassignment.cpp  agentassignment.h  boot.cpp  boot.h  controlgenerator.cpp  controlgenerator.h  equipscreen.cpp  equipscreen.h  gameui.vcxproj  gameui.vcxproj.filters  gameui_pch.h
tests/: .test_rng.cpp.swp  CMakeLists.txt  packages.config  test_backtrace.cpp  test_colour.cpp  test_images.cpp  test_images.vcxproj  test_images.vcxproj.filters  test_lab_assignment.cpp  test_rect.cpp  test_rng.cpp  test_rng.vcxproj  test_rng.vcxproj.filters  test_serialize.cpp  test_serialize.vcxproj  test_serialize.vcxproj.filters  test_tilemap.cpp  test_unicode.cpp  test_voxel.cpp
tools/: CMakeLists.txt  bash_openapoc_readme.txt  bashalias.txt  build_mod.sh  extract_battlescape_map.cpp  extract_economy.cpp  extract_save_game.sh  extractor.vcxproj  extractor.vcxproj.filters  generate_crc.sh  lint-tidy.sh  lint.sh  packages.config  pretty_print_xml.sh
tools/code_generators/: CMakeLists.txt  serialization_xml.cpp  serialization_xml.h
tools/dump_everything/: CMakeLists.txt  dump_everything.cpp
tools/extract_form_translations/: CMakeLists.txt  main.cpp
tools/extractors/: CMakeLists.txt  extract_agent_equipment.cpp  extract_agent_types.cpp  extract_animation_pack_template.cpp  extract_base_layouts.cpp  extract_battle_shared_resources.cpp  extract_battlescape_map.cpp  extract_battlescape_map_parts.cpp  extract_battlescape_scenery.cpp  extract_battlescape_stuff.cpp  extract_buildings.cpp  extract_bulletsprites.cpp  extract_city_map.cpp  extract_city_scenery.cpp  extract_doodads.cpp  extract_economy.cpp  extract_facilities.cpp  extract_organisations.cpp  extract_research.cpp  extract_unit_animation_pack_bsk.cpp  extract_unit_animation_pack_chrysalis.cpp  extract_unit_animation_pack_civ.cpp  extract_unit_animation_pack_egg.cpp  extract_unit_animation_pack_gun.cpp  extract_unit_animation_pack_hyper.cpp  extract_unit_animation_pack_mega.cpp  extract_unit_animation_pack_micro.cpp  extract_unit_animation_pack_multi.cpp  extract_unit_animation_pack_popper.cpp  extract_unit_animation_pack_psi.cpp  extract_unit_animation_pack_q.cpp  extract_unit_animation_pack_spitter.cpp  extract_unit_animation_pack_template.cpp  extract_unit_animation_pack_unit.cpp  extract_unit_animation_packs.cpp  extract_vehicles.cpp  (+7 more)
(+3993 files in other folders)
